--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,8 @@ jobs:
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
         with:
-          packages: |
-            tools
-            platform-tools
-            platforms;android-35
-            build-tools;35.0.0
+          packages: tools platform-tools platforms;android-35 build-tools;35.0.0
+          accept-android-sdk-licenses: yes
 
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v5
