--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         uses: android-actions/setup-android@v3
         with:
           packages: tools platform-tools platforms;android-35 build-tools;35.0.0
-          accept-android-sdk-licenses: yes
+          accept-android-sdk-licenses: true
 
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v5
