--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
         uses: android-actions/setup-android@v3
         with:
           packages: tools platform-tools platforms;android-35 build-tools;35.0.0
-          accept-android-sdk-licenses: yes
+          accept-android-sdk-licenses: true
 
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v5
@@ -63,7 +63,7 @@ jobs:
         uses: android-actions/setup-android@v3
         with:
           packages: tools platform-tools platforms;android-35 build-tools;35.0.0
-          accept-android-sdk-licenses: yes
+          accept-android-sdk-licenses: true
 
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v5
