--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,7 +40,7 @@ jobs:
         run: ./gradlew :library:assembleRelease :library:publishToMavenLocal
 
   publish:
-    name: Publish to Sonatype
+    name: Publish to Maven Central
     runs-on: ubuntu-latest
     if: (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) || (github.event_name == 'workflow_dispatch' && inputs.dry_run == false)
     environment: release
@@ -62,20 +62,21 @@ jobs:
 
       - name: Validate required secrets
         env:
-          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          MAVEN_CENTRAL_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          MAVEN_CENTRAL_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
           SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
         run: |
-          test -n "$SONATYPE_USERNAME" || (echo "Missing SONATYPE_USERNAME" && exit 1)
-          test -n "$SONATYPE_PASSWORD" || (echo "Missing SONATYPE_PASSWORD" && exit 1)
+          test -n "$MAVEN_CENTRAL_USERNAME" || (echo "Missing SONATYPE_USERNAME" && exit 1)
+          test -n "$MAVEN_CENTRAL_PASSWORD" || (echo "Missing SONATYPE_PASSWORD" && exit 1)
           test -n "$SIGNING_KEY" || (echo "Missing SIGNING_KEY" && exit 1)
           test -n "$SIGNING_PASSWORD" || (echo "Missing SIGNING_PASSWORD" && exit 1)
 
-      - name: Publish release publication
+      - name: Publish to Maven Central
         env:
-          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
-          SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
-        run: ./gradlew :library:publishReleasePublicationToSonatypeRepository
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
+          SONATYPE_HOST: CENTRAL_PORTAL
+        run: ./gradlew :library:publishToMavenCentral
