Enhance CI workflow to handle coverage badge updates more robustly
- Updated the CI workflow to check for multiple coverage file locations, ensuring the coverage badge is updated correctly even if the expected file is missing.
- Defaulted coverage value to 0 if no coverage file is found, improving reliability of badge updates.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,13 @@ jobs:
 
       - name: Update README with coverage badge
         run: |
-          COV=$(cat coverage-pct/coverage-pct.txt)
+          if [ -f coverage-pct/coverage-pct.txt ]; then
+            COV=$(cat coverage-pct/coverage-pct.txt)
+          elif [ -f coverage-pct.txt ]; then
+            COV=$(cat coverage-pct.txt)
+          else
+            COV=0
+          fi
           COV=${COV:-0}
           if (( $(echo "$COV >= 90" | bc -l) )); then
             COLOR="brightgreen"
